# FundamentaLLM

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN_SUMMARY.md  Makefile  PHASE_1_PLAN.md  PHASE_3_COMPLETE.md  PHASE_3_PLAN.md  PHASE_3_QUICK_REFERENCE.md  PHASE_4_PLAN.md  PHASE_7_COMPLETE.md  PLAN_INDEX.md  README.md  VITEPRESS_SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.archive/: BEFORE_AFTER.md  IMPLEMENTATION.md  PHASE_2_PLAN.md  PHASE_4_HANDOVER.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_7_PLAN.md  REVIEW.md
.github/workflows/: ci.yml  docs.yml  release.yml
configs/: default.yaml  large.yaml  small.yaml
docs/: DEVELOPER_GUIDE.md  PHASE-3-COMPLETION-CHECKLIST.md  VITEPRESS_SETUP.md  architecture.md  clipboard.md  documentation-update-summary-jan-2026.md  documentation-updates-phase-3-summary.md  formatting-fixes-summary.md  getting_started.md  issues.md  quick-cmds.md  training_guide.md
docs/instruct/: DESIGN_SYSTEM.md  LL_LI.md
models/comp_model2/: model.yaml  tokenizer.json  training.yaml
models/complex_model_deep/: model.yaml  training.yaml  validation.txt
models/large_model2/: model.yaml  tokenizer.json  training.yaml
models/large_model_quick/: model.yaml  training.yaml  validation.txt
models/small_model/: model.yaml  training.yaml
pages/: README.md  clipboard.md  index.md  package-lock.json  package.json
pages/.vitepress/: config.js
scripts/: create_math_test.py  fix_bash_multiline.py  setup_math_rendering.py
tests/: conftest.py
(+104 files in other folders)
