[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundamentallm"
version = "0.1.0"
description = "Educational character-level transformer language model framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "FundamentaLLM Contributors", email = "devs@example.com" }]
dependencies = [
  "torch>=2.0.0",
  "pydantic>=2.0.0",
  "click>=8.0.0",
  "pyyaml>=6.0",
  "tqdm>=4.65.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.5.0",
  "pylint>=3.0.0",
  "pre-commit>=3.4.0",
]
experiments = [
  "wandb>=0.16.0",
  "tensorboard>=2.12.0",
  "jupyter>=1.0.0",
]

[project.scripts]
fundamentallm = "fundamentallm.cli.commands:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["fundamentallm"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["fundamentallm"]
